# cask-automation-orchestration

./: .env  .gitignore  Cargo.toml  cask.yaml  robot.py
output/: log.html  output.robolog
src/: bootstrap.rs  config.rs  main.rs
